Compute initial values for registered custom properties.

This patch makes initial values for registered custom properties go
through computation, so initial values like calc(10px) end up as 10px
when accessed through getComputedStyle. As per css-cascade logic they
would normally go through regular computation anyway, but since we
skip this for registered properties for efficiency we need to handle
this case specially.

BUG=671490

Review-Url: https://codereview.chromium.org/2622403006
Cr-Commit-Position: refs/heads/master@{#443847}

Former-commit-id: 8a637421ef6b1bbfe05708f814a914e57c17a8b6